--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-draft-wysiwyg",
+  "name": "@23/react-draft-wysiwyg",
   "version": "1.12.13",
   "description": "A wysiwyg on top of DraftJS.",
   "main": "dist/react-draft-wysiwyg.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jpuri/react-draft-wysiwyg.git"
+    "url": "https://github.com/23/react-draft-wysiwyg.git"
   },
   "author": "Jyoti Puri",
   "devDependencies": {
